--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -14,7 +14,7 @@ Password:
 <input type='password' name='password' id='password'/>
 </li>
 <li>
-<input type='submit' name='login' value='login' id='loginSubmit' onclick="return loginFormSubmit();"/>
+<input type='submit' class='button' name='login' value='login' id='loginSubmit' onclick="return loginFormSubmit();"/>
 </li>
 </form>
 
