--- a/views/footer.erb
+++ b/views/footer.erb
@@ -18,7 +18,7 @@
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
 <% if is_app? %>
-<li>
+<li class='footer'>
 <div id="accel-data">
  x: <span id="x"></span>
  y: <span id="y"></span>
