various fixes and android app release

--- a/views/footer.erb
+++ b/views/footer.erb
@@ -17,7 +17,7 @@
 <li class='footer'>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
-<% if is_app? %>
+<% if is_app? && false %>
 <li class='footer'>
 <div id="accel-data">
  x: <span id="x"></span>
