--- a/phonegap-android/res/layout/splash.xml
+++ b/phonegap-android/res/layout/splash.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-        <ImageView android:id="@+id/splashscreen" 
+        <ImageView android:id="@+id/fitbitsplash" 
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent" 
                 android:src="@drawable/fitbitsplash"/>
