--- a/views/food_log.erb
+++ b/views/food_log.erb
@@ -14,7 +14,7 @@ Add Food
 </li>
 
 <form action='/log_food' method='post' id='foodLogForm'>
-<input type='hidden' name='food_date' value="<%=format_date(@start_date)%>" />
+<input type='hidden' name='food_date' id='food_date' value="<%=format_date(@start_date)%>" />
 <li>
 Food Eaten:
 <input type='text' name='food' id='food' />
