--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -18,7 +18,8 @@ Password:
 </li>
 </form>
 
-<% if ENV['rpx_key'] && !params['app'] %>
+<% if ENV['rpx_key'] && !params['app'] && false %>
+<!-- just removing the RPX as it doesn't work on mobile really -->
 <li>
 <br/>
 Or login with the options below <br/>
