--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,6 +29,7 @@ get_local_resource('/fitbit-web.js') %>"></script>
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <link rel="apple-touch-startup-image" href="/fitbitsplash.png" />
 <link rel="apple-touch-icon" href="/icon.png">
+<title>FitbitMini - mobile fitbit app</title>
 </head>
 
 <body onload="init();">
