--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <head>
 <script type="text/javascript" charset="utf-8" src="<%=
 get_local_resource('/jquery-1.4.2.min.js') %>"></script>
+<script type="text/javascript" charset="utf-8" src="<%=
+get_local_resource('/jquery.autocomplete.js') %>"></script>
 <script type="text/javascript" charset="utf-8"
 src="<%= get_local_resource('/jquery.sparkline.min.js') %>"></script>
 <script type="text/javascript" charset="utf-8" src="<%=
