--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,7 @@ get_local_resource('/fitbit-web.js') %>"></script>
 <link rel="apple-touch-startup-image" href="/fitbitsplash.png" />
 <link rel="apple-touch-icon" href="/icon.png">
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="viewport" content="user-scalable=yes, width=device-width" />
+<meta name="viewport" content="user-scalable=false, initial-scale=1.0, width=device-width" />
 <title>FitbitMini - mobile fitbit app</title>
 </head>
 
