no scroll on food log

--- a/views/food_log.erb
+++ b/views/food_log.erb
@@ -17,7 +17,7 @@ Add Food
 <input type='hidden' name='food_date' id='food_date' value='<%= format_date(@start_date) %>' />
 <li>
 Food Eaten:
-<input type='text' name='food' id='food' onclick='window.scrollBy(0,50);' />
+<input type='text' name='food' id='food'/>
 </li>
 
 <li>
