removed unneeded android permission

--- a/views/food_log.erb
+++ b/views/food_log.erb
@@ -69,6 +69,6 @@ When:
 </li>
 
 <li>
-<input type='submit' class='button' name='log_food' value='log food' id='log_food_submit'/>
+<input type='submit' class='button' name='log_food' value='log food' id='log_food_submit' onclick="this.disable(); return false;"/>
 </li>
 </form>
