improving the look and feel, using more webkit CSS

--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,4 +1,5 @@
 <!-- needs to check if account valid not just account --!>
+<div class="bottomcurve">
 <li class='footer'>
 <% if @account && !is_app? %> 
 <a href="/home" onclick="return getHome('/home')">home</a>
@@ -27,3 +28,4 @@ Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </div>
 </li>
 <% end %>
+</div>
