--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,8 +40,8 @@ get_local_resource('/fitbit-web.js') %>"></script>
    <ul class="iphone-scroll afs-gentium-book-basic">
       <li>
         <div class="nav-indicator-fixed"></div>
-        <div class="nav-indicator afs-ubuntu">
-	  Fitbit Mini
+        <div class="nav-indicator afs-ubuntu topnav">
+	  <h5>Fitbit Mini</h5>
 	  <span id="loading" style="display:none">
 	  <img src="<%=get_local_resource('/spinner.gif') %>"
 	  alt="loading..." /></span>
