--- a/public/base.css
+++ b/public/base.css
@@ -29,7 +29,7 @@ html, body {
 
 .iphone-scroll ul li strong { margin-right:10px; }
  
-.nav-indicator { font-size: 17px; color:#00394A; text-indent:20px;  background-color:#7AA4A8; line-height: 30px; }
+.nav-indicator { font-size: 17px; color:#00394A; text-indent:20px;  background-color:#7AA4A8; line-height: 30px;  -webkit-border-radius: 12px; }
  
 .nav-indicator-fixed { line-height:20px;
   backgrouond-color:#000000;
@@ -37,6 +37,8 @@ html, body {
  text-indent:20px;
  position:fixed;
  /*width:320px;*/ }
+
+. { position: relative; height: 42px; border: 1px solid #cad6e2; border-bottom-color: #22374a; border-right: 0; border-left: 0; text-align: center; background: -webkit-gradient(linear, left top, left bottom, from(#afbbcb), to(#6e86a4), color-stop(0.48, #8b9db5), color-stop(0.5, #8195af)); }
 
 .error-msg {
  color: red;
@@ -59,15 +61,24 @@ html, body {
 }
 
 li.footer, .iphone-scroll ul li.footer{ 
-  color:#FFFFFF;
-  background-color:#00A47B;
+  color:#000;
   border-bottom-width: 0px;
   border-bottom-style:none;
 }
 
+.bottomcurve {
+  background-color:#00A47B;
+  background: -webkit-gradient(linear, left top, left bottom,  from(#7AA4A8), to(#fff), color-stop(0.3, #7AA4A8));
+  -webkit-border-top-right-radius: 12px;
+  -webkit-border-top-left-radius: 12px;
+}
+
+
 .header { color:#FFFFFF; background-color:#0000A4; }
 .header a { color:#81F7F3 }
 
+.topnav { position: relative; height: 42px; border: 1px solid #cad6e2; border-bottom-color: #22374a; border-right: 0; border-left: 0; text-align: center; background: -webkit-gradient(linear, left top, left bottom, from(#afbbcb), to(#6e86a4), color-stop(0.48, #8b9db5), color-stop(0.5, #8195af)); }
+.topnav h5 { font-size: 20px; color: #fff; text-shadow: 0 -1px 0 rgba(0,0,0, 0.4); margin: 8px 0 0 0; }  
 
 /*
 **
@@ -93,9 +104,9 @@ li.footer, .iphone-scroll ul li.footer{
       font-weight: bold;
       width: 97%;
       height: 50px;
-      border: 3px solid #282726;
+      border: 1px solid #282726;
       background: -webkit-gradient( linear, left top, left bottom, from(#e2e2e2), to(#8c8a88), color-stop(0.5, #acadae), color-stop(0.5, #82807e) );
-      margin: 0 0 3px 0;
+      margin: 3px 0 3px 0;
       text-shadow: 0px 1px 0 #cecece;
       -webkit-background-origin: padding-box;
       -webkit-background-clip: border-box;
