--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,10 +41,10 @@ get_local_resource('/fitbit-web.js') %>"></script>
       <li>
         <div class="nav-indicator-fixed"></div>
         <div class="nav-indicator afs-ubuntu topnav">
-	  <h5>Fitbit Mini</h5>
+	  <h5>Fitbit Mini
 	  <span id="loading" style="display:none">
 	  <img src="<%=get_local_resource('/spinner.gif') %>"
-	  alt="loading..." /></span>
+	  alt="loading..." /></span></h5>
         </div>
 	<div id="content">
 	  <%= yield %>
