--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -7,7 +7,7 @@ Log in with Fitbit user/pass.<br/>
 <form action='/account/login' method='post' id='loginForm'>
 <li>
 Email:
-<input type='text' name='email' id='email' />
+<input type='email' name='email' id='email' />
 </li>
 <li>
 Password:
