another email field

--- a/views/account.erb
+++ b/views/account.erb
@@ -6,7 +6,7 @@
 	<li>
     <form action='/account/edit' method='post'>
     Email:
-	<input type='text' name='email' placeholder='<%= @account.fitbit_email %>' />
+	<input type='email' name='email' placeholder='<%= @account.fitbit_email %>' />
           </li>
 	<li>
     Password:
